--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/poppins": "^5.0.8",
     "@loadable/component": "^5.15.3",
     "@types/loadable__component": "^5.13.6",
+    "axios": "^1.6.0",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
