--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@loadable/component": "^5.15.3",
     "@types/loadable__component": "^5.13.6",
     "axios": "^1.6.0",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
