--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/loadable__component": "^5.13.6",
     "axios": "^1.6.0",
     "framer-motion": "^10.16.4",
+    "is-online": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
