--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://Aristidescosta.github.io/myAnimeLib",
+  "homepage": "https://Aristidescosta.github.io/myAnimeLib",
   "name": "myanimelib",
   "private": true,
   "version": "0.0.0",
@@ -9,8 +9,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-		"predeploy": "yarn run build",
-		"deploy": "gh-pages -d dist"
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
@@ -22,6 +22,7 @@
     "@loadable/component": "^5.15.3",
     "@types/loadable__component": "^5.13.6",
     "axios": "^1.6.0",
+    "firebase": "^10.6.0",
     "framer-motion": "^10.16.4",
     "gh-pages": "^6.0.0",
     "is-online": "^10.0.0",
